--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "check-types": "tsc",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --color --progress --no-open",
-    "build": "npx remnote-plugin validate && shx rm -rf dist && cross-env NODE_ENV=production webpack --color --progress && shx cp README.md dist && cd dist && bestzip ../PluginZip.zip ./*"
+    "build": "npx remnote-plugin validate && shx rm -rf dist && cross-env NODE_ENV=production webpack --color --progress && shx cp README.md dist && cd dist && bestzip ../PluginZip.zip ./*",
+    "test": "npx jest",
+    "test:watch": "npx jest --watch"
   },
   "dependencies": {
     "@excalidraw/excalidraw": "^0.15.2",
@@ -20,6 +22,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@types/debounce": "^1.2.1",
     "@types/deep-equal": "^1.0.1",
+    "@types/jest": "^29.5.3",
     "@types/node": "^18.0.3",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
@@ -39,6 +42,7 @@
     "shx": "^0.3.4",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.1.5",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
     "webpack": "^5.73.0",
